added bootstrap css

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -32,3 +32,11 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+
+
+
+.calendar-week {
+    border: 1px solid black;
+    margin-bottom: 20px;
+}
