--- a/src/less/calendar.less
+++ b/src/less/calendar.less
@@ -2,7 +2,7 @@
     border: 1px solid black;
 
     div {
-        .marked {
+        &.marked {
             background-color: tomato;
         }
     }
